syntax = "proto3";

option go_package = "github.com/rishabh-22/blogapp-grpc/blogpost";

message CreatePost {
  string Title = 1;
  string Content = 2;
  string Author = 3;
  string PublicationDate = 4;
  string Tags = 5;
}

message ReadPost {
  int64 PostID = 1;
}

message UpdatePost {
  int64 PostID = 1;
  string Title = 2;
  string Content = 3;
  string Author = 4;
  string Tags = 5;
}

message Response {
  int64 PostID = 1;
  string Title = 2;
  string Content = 3;
  string Author = 4;
  string PublicationDate = 5;
  string Tags = 6;
}

message Message {
  string body = 1;
}

service BlogService {
  rpc Create(CreatePost) returns (Response);
  rpc Read(ReadPost) returns (Response);
  rpc Update(UpdatePost) returns (Response);
  rpc Delete(ReadPost) returns (Message);
}

